Modified widget section

--- a/wp-content/themes/travello/assets/scss/_blog.scss
+++ b/wp-content/themes/travello/assets/scss/_blog.scss
@@ -750,7 +750,7 @@
     }
 
 
-    .post_category_widget {
+    .widget_categories {
         .cat-list {
             li {
                 border-bottom: 1px solid #f0e9ff;
@@ -823,7 +823,7 @@
         }
     }
 
-    .tag_cloud_widget {
+    .widget_tag_cloud {
         ul {
             li {
                 display: inline-block;
